[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "octochains"
version = "0.1.0"
description = "A MapReduce-inspired framework for parallel, isolated multi-agent reasoning."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name="Ahmad", email="ahmad.vh7@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


dependencies = [
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
litellm = ["litellm>=1.0.0"]

[project.urls]
"Homepage" = "https://github.com/ahmadvh/octochains"
"Bug Tracker" = "https://github.com/ahmadvh/octochains/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
octochains = ["*.py"]